[package]
name = "btc-addgen"
description = "Bitcoin address generator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
secp256k1 = { version = "0.26.0", features = ["rand"] }
base58check = "0.1.0"
clap = "4.5.11"
hashes = "0.1.9"
rand = "0.8.5"
ripemd = "0.1.3"
sha2 = { version = "0.10" }
hex = "0.4.3"
